--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,5 +4,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
+    <context-param>
+        <param-name>max-shopping-cart-size</param-name>
+        <param-value>99</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>project-team-name</param-name>
+        <param-value>The Coding Gurus</param-value>
+    </context-param>
 
 </web-app>
